--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
 					La Panthère <br>
 					Agence web basée à Lyon
 				</h1>
-				<button class="text-center">
+				<div class="text-center">
 					<a href="page2.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
-				</button>
+				</div>
 			</div>
 		</div>
 	</div>
