--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		<nav class="navbar row">
 			<div class="navbar-header">
 				
-				<a class="navbar-brand" href="index.html"><img src="./img/logo-lapanthere.png" alt="Logo agence web design La Panthère" /></a>
+				<a class="navbar-brand" href="index.html"><img src="./img/logo-lapanthere.png" height="40px" alt="Logo agence web design La Panthère" /></a>
 				
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
