--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
-				<img src="img/logo.png" class="center-block image-resize-mode"  alt=" Logo Agence web La Panthère" />
+				<img src="img/logo.png" class="center-block image-resize-mode" height="100px" alt=" Logo Agence web La Panthère" />
 				<h1 class="text-center  tc-white ">
 					La Panthère <br>
 					Agence web basée à Lyon
