--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="utf-8">
-    <meta name="description" content="La Panthère est une agence de web design spéciliasé dans la creation de site internet">
+    <meta name="description" content="La Panthère est une agence de web design spéciliasé dans la creation de site internet basée sur Lyon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
