--- a/page2.html
+++ b/page2.html
@@ -78,7 +78,7 @@
 		<div class="row">
 			<div class="col-sm-6">
 				<h2><strong>Vous souhaitez être mis en relation avec nos experts ?</strong> </h2>
-				<form id="form_1" novalidate success-msg="Votre message a été envoyé." fail-msg="Désolé, il semble que notre serveur de messagerie ne réponde pas, Désolé pour le dérangement !">
+				<form id="form_1" novalidate data-success-msg="Votre message a été envoyé." data-fail-msg="Désolé, il semble que notre serveur de messagerie ne réponde pas, Désolé pour le dérangement !">
 					<div class="form-group">
 						<label for="name">Nom</label>
 						<input id="name" class="form-control" placeholder="Votre Nom" required />
